# ritcher-map

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile-db  README.md  cors.json  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: launch.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/: dependabot.yml
.github/workflows/: accounts.yml  catalog.yml  gateway.yml  proto.yml  tile.yml  tiler.yml
db/init/: 01-extensions.sql
proto/: README.md  auth.proto  buf.gen.yaml  buf.yaml
proto/ritchermap/auth/v1/: auth.proto
proto/ritchermap/catalog/v1/: catalog.proto
proto/ritchermap/progress/v1/: progress.proto
proto/ritchermap/tiling/v1/: tiling.proto
src/accounts/: Dockerfile  Dockerfile.test  Gemfile  README.md
src/accounts/.claude-flow/data/: pending-insights.jsonl
src/accounts/app/controllers/: application_controller.rb
src/accounts/app/models/: subscription.rb  user.rb
src/accounts/app/services/: jwt_service.rb  stripe_service.rb  user_serializer.rb
src/accounts/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
src/accounts/config/environments/: development.rb  production.rb  stripe.rb  test.rb
src/accounts/db/migrate/: 20260601000001_create_users.rb  20260601000002_create_subscriptions.rb  (+2 more)
src/analytics-service/: package.json  pnpm-lock.yaml
src/analytics-service/src/: app.js  server.js
src/api-gateway/: Dockerfile
src/api-gateway/map-access-control/: handler.lua
src/backend/identity-api/: Identity.API.sln  compose.yaml
src/backend/map-tile-service/: Cargo.toml  Dockerfile  README.md
src/backend/map-tile-service/src/: config.rs  error.rs  handlers.rs  models.rs
src/backend/map-tile-service/src/services/: cache.rs  mod.rs  storage.rs  tile.rs
src/backend/map-tile-service/src/utils/: metrics.rs  mod.rs
src/backend/marker-service/: main.go
src/catalog/: .dockerignore  Dockerfile  Dockerfile.test  README.md  build.gradle
src/community-service/: .env.example  .gitignore  Dockerfile  composer.json
src/community-service/routes/: api.php
src/content-management-service/: Dockerfile  Gemfile
src/content-management-service/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
src/content-management-service/db/: schema.rb
src/gateway/: .dockerignore  Dockerfile  Dockerfile.test  go.mod  go.sum
src/identity-api/: Identity.API.sln
src/identity-api/AuthService/: AuthService.csproj  Program.cs  appsettings.Development.json
src/map-tile-service/: Cargo.toml  Dockerfile  prometheus.yml
src/map-tile-service/config/: development.toml  production.toml
src/map-tile-service/kubernetes/: deployment.yaml
src/map-tile-service/migrations/: 001_initial_schema.sql
src/map-tile-service/monitoring/: prometheus.yml
src/map-tile-service/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs
src/map-tile-service/src/database/: connection.rs
src/map-tile-service/src/handlers/: health.rs  mod.rs  tiles.rs
src/map-tile-service/src/middleware/: cors.rs  mod.rs
src/map-tile-service/src/models/: game.rs  mod.rs  tile.rs
src/map-tile-service/src/services/: cache_manager.rs  image_processor.rs  mod.rs  tile_generator.rs
src/map-tile-service/src/utils/: error.rs  image.rs  metrics.rs  mod.rs  spatial.rs
src/marker-service/: Dockerfile  build.gradle  marker-service.md  pom.xml  settings.gradle
src/notification-service/: Dockerfile  mix.exs
src/notification-service/config/: config.exs  dev.exs  prod.exs
src/notification-service/lib/: notification_service_web.ex
src/real-time-service/: Dockerfile  go.mod  go.sum  main.go
src/real-time-service/scripts/: generate-proto.sh
src/search-service/: .dockerignore  .env  Dockerfile  requirements.txt  search_service.md
src/search-service/app/: main.py
src/tile/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.test  build.rs
src/tile/src/: cluster.rs  consumer.rs  domain.rs  events.rs  http.rs  lib.rs  main.rs  repo.rs  tiles.rs
src/tiler/: .dockerignore  Dockerfile  Dockerfile.test  cli.py  pyproject.toml  pyramid.py  storage.py  tiles.py  worker.py
web/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  config.ts  main.tsx  styles.css  types.ts
web/src/api/: maps.ts
web/src/auth/: AuthContext.tsx  LoginForm.tsx
web/src/map/: MapView.tsx  useViewportMarkers.ts
web/src/panels/: CategoryPanel.tsx  MapPicker.tsx
webapp/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
webapp/.claude-flow/data/: pending-insights.jsonl
webapp/.claude-flow/neural/: stats.json
webapp/scripts/: generate-category-icons.mjs
webapp/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
webapp/src/components/: SiteHeader.tsx
webapp/src/lib/: config.ts  games.ts  iconPresets.test.ts  iconPresets.ts  icons.test.ts  icons.ts  server.ts  types.ts
(+386 files in other folders)
