[package]
name = "map-tile-service"
version = "0.1.0"
edition = "2021"
authors = ["Richard Tang <rxtang@ucsd.edu>"]
description = "A microservice for generating and serving map tiles"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Image processing
image = "0.24"
rayon = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1.5"

# Configuration
config = "0.13"
dotenv = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Storage backends
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"], optional = true }
aws-sdk-s3 = { version = "0.35", optional = true }

# API documentation
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.8"
mockall = "0.11"

[features]
default = ["filesystem-storage"]
filesystem-storage = []
s3-storage = ["aws-sdk-s3"]
redis-cache = ["redis"]
all-storage = ["filesystem-storage", "s3-storage", "redis-cache"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "tile-service"
path = "src/main.rs"