[package]
name = "tile-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0" # bumped from 1.89: sqlx 0.9 requires rustc >= 1.94

[features]
# Expose InMemoryRepo (see repo.rs) outside of `#[cfg(test)]` via
# `--features memrepo` for local demos/examples. Declaring it also satisfies
# cargo's check-cfg lint (otherwise `feature = "memrepo"` warns as unknown).
memrepo = []

[dependencies]
"axum" = "0.8.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
moka = { version = "0.12", features = ["future"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.18"
bytes = "1"
async-trait = "0.1"